# gmsh-rs

./: Cargo.toml  LICENSE  README.md
src/: decode.rs  element.rs  format.rs  lib.rs  mesh.rs  node.rs  tag.rs
src/coordinate/: mod.rs  test.rs
src/decode/: mod.rs  t4.msh  test.rs  v1.rs  v2.rs  v4.rs
src/element/: mod.rs
src/element/parser/: decode.rs  mod.rs  test.rs
src/entity/: mod.rs
src/entity/parser/: decode.rs  mod.rs  test.rs
src/format/: mod.rs
src/format/parser/: mod.rs
src/mesh/: mod.rs
src/mesh_format/: mod.rs
src/mesh_format/parser/: decode.rs  mod.rs  test.rs
src/node/: mod.rs  test.rs
src/node/data/parser/: mod.rs
src/node/parser/: decode.rs  mod.rs  test.rs
src/node_data/: mod.rs
src/node_data/parser/: decode.rs  mod.rs  test.rs
