[package]
name = "gmsh-rs"
version = "0.1.0"
authors = [
	"Pedro Henrique Dalla Pacce <pedrodallapacce@gmail.com>",
	"Daniela Davi Madureira Iope <daniela.iope@hotmail.com>",
	]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
