[package]
name = "rutile"
version = "0.1.1"
authors = [
	"Pedro Henrique Dalla Pacce <pedrodallapacce@gmail.com>",
	"Daniela Davi Madureira Iope <daniela.iope@hotmail.com>",
	]
edition = "2018"
description = "Minimal gmsh parser"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pacce/rutile.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rutile"
path = "src/lib.rs"

[dependencies]
nom = "5"
