[package]
name = "rutile"
version = "0.2.0"
authors = [
	"Pedro Henrique Dalla Pacce <pedrodallapacce@gmail.com>",
	"Daniela Davi Madureira Iope <daniela.iope@hotmail.com>",
	]
edition = "2021"
description = "Minimal gmsh parser"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pacce/rutile.git"

[lib]
name = "rutile"
path = "src/lib.rs"

[dependencies]
nom = "7"
